<resources>
    <string name="app_name">Canvas Vision</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="app_detail_name"> </string>
    <string name="action_settings">Settings</string>
    <string name="appwidget_text">Canvas Vision</string>
    <string name="add_widget">Add widget</string>
    <string name="powered_by">Powered By:</string>
    <string name="by">By:</string>
    <string name="downloads">Downloads:</string>
    <string name="favourite">Favourites:</string>
    <string name="no_internet">no internet connection</string>
    <string name="navigation">navigation drawer</string>
    <string name="desc_powered_image">pixabay</string>
    <string name="detail_image">detail image</string>
    <string name="explore_item">Category item</string>
    <string name="latest">Latest</string>
    <string name="latest_small">latest</string>
    <string name="editor">Editor\'s Choice</string>
    <string name="editor_small">editors_choice</string>
    <string name="collection">My Collection</string>
    <string name="about_us">About Us</string>
    <string name="license">License</string>
    <string name="info">Info</string>
    <string name="set_as">Set As</string>
    <string name="download">Download</string>
    <string name="user_name">image provided by</string>
    <string name="pixabay_link">https://pixabay.com</string>
    <string name="collection_string">collection</string>
    <string name="jpg">.jpg</string>
    <string name="discoverfragment">DiscoverFragment</string>
    <string name="explorefragment">ExploreFragment</string>
    <string name="popular">popular</string>
    <string name="package_drawable">com.example.android.capstone:drawable/</string>
    <string name="Animals">Animals</string>
    <string name="animals">animals</string>
    <string name="Textures">Textures</string>
    <string name="backgrounds">backgrounds</string>
    <string name="Architecture">Architecture</string>
    <string name="buildings">buildings</string>
    <string name="Business">Business</string>
    <string name="business">business</string>
    <string name="Communication">Communication</string>
    <string name="computer">computer</string>
    <string name="Education">Education</string>
    <string name="education">education</string>
    <string name="Fashion">Fashion</string>
    <string name="fashion">fashion</string>
    <string name="Emotions">Emotions</string>
    <string name="feelings">feelings</string>
    <string name="Food">Food</string>
    <string name="food">food</string>
    <string name="Health">Health</string>
    <string name="health">health</string>
    <string name="Craft">Craft</string>
    <string name="industry">industry</string>
    <string name="Music">Music</string>
    <string name="music">music</string>
    <string name="Nature">Nature</string>
    <string name="nature">nature</string>
    <string name="People">People</string>
    <string name="people">people</string>
    <string name="Places">Places</string>
    <string name="places">places</string>
    <string name="Religion">Religion</string>
    <string name="religion">religion</string>
    <string name="Technology">Technology</string>
    <string name="science">science</string>
    <string name="Sports">Sports</string>
    <string name="sports">sports</string>
    <string name="Transportation">Transportation</string>
    <string name="transportation">transportation</string>
    <string name="Travel">Travel</string>
    <string name="travel">travel</string>
    <string name="No_Success">No Success</string>
    <string name="wrong_message">Something Went Wrong!</string>
    <string name="pixabay_api_link">http://pixabay.com/api/</string>
    <string name="License">License</string>
    <string name="font_name">fonts/Satisfy-Regular.ttf</string>
    <string name="ad_device_test">CADD03C7EC8C7AD4D6073860CC9B3BF7</string>
    <string name="image_downloaded">Image Already Downloaded</string>
    <string name="Set_As">Set As</string>
    <string name="first_down">Please Download First</string>
    <string name="down_canvas">Downloading from Canvas Vision</string>
    <string name="down_complete">.jpg Download Complete</string>
    <string name="down">.jpg Download</string>
    <string name="widget">widget</string>
    <string name="Loading_view">Loading view</string>
    <string name="URI">URI:</string>
    <string name="image_jpg">image/jpg</string>
    <string name="mimeType">mimeType</string>
    <string name="widget_item">widget item</string>

    <!-- AdMob ad unit IDs -->
    <string name="banner_home_footer">ca-app-pub-1060534192860592/4572822869</string>

    <string name="license1">Copyright 2013 Square, Inc.
        Licensed under the Apache License, Version 2.0 (the "License");
        you may not use this file except in compliance with the License.
        You may obtain a copy of the License at

          <a href="http://www.apache.org/licenses/LICENSE-2.0"><font color="FF00CC"> http://www.apache.org/licenses/LICENSE-2.0</font></a>

        Unless required by applicable law or agreed to in writing, software
        distributed under the License is distributed on an "AS IS" BASIS,
        WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
        See the License for the specific language governing permissions and
        limitations under the License.</string>
        <string name="license2">Copyright 2015 Wasabeef
        Licensed under the Apache License, Version 2.0 (the "License");
        you may not use this file except in compliance with the License.
        You may obtain a copy of the License at

          <a href="http://www.apache.org/licenses/LICENSE-2.0"><font color="FF00CC"> http://www.apache.org/licenses/LICENSE-2.0</font></a>

        Unless required by applicable law or agreed to in writing, software
        distributed under the License is distributed on an "AS IS" BASIS,
        WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
        See the License for the specific language governing permissions and
        limitations under the License.</string>
    <string name="about"> <b>Developer:</b> \t Mudit Srivastava \n\nIndian Institute of Technology Dhanbad \n\n<b>Email:</b>\n\n AndroidWorkProj2908@gmail.com
    </string>

</resources>
