<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_latest"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/latest" />
        <item
            android:id="@+id/nav_editor"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/editor" />
        <item
            android:id="@+id/nav_collection"
            android:icon="@drawable/ic_menu_collect"
            android:title="@string/collection" />

    </group>

    <item android:title="@string/info">
        <menu>
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_menu_info"
                android:title="@string/about_us" />
            <item
                android:id="@+id/nav_license"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/license" />
        </menu>
    </item>

</menu>
